fix: resolve lint errors and add lint task to project.json

--- a/packages/web-serial-rxjs/project.json
+++ b/packages/web-serial-rxjs/project.json
@@ -16,6 +16,9 @@
         "format": ["cjs"],
         "generatePackageJson": true
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint"
     }
   }
 }
