--- a/apps/examples/vanilla-js/tsconfig.json
+++ b/apps/examples/vanilla-js/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
@@ -13,10 +14,5 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src/**/*"],
-  "references": [
-    {
-      "path": "../../../tsconfig.base.json"
-    }
-  ]
+  "include": ["src/**/*"]
 }
