--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nx/eslint": "20.3.1",
     "@nx/eslint-plugin": "20.3.1",
     "@nx/js": "^22.2.3",
+    "@nx/react": "^22.3.3",
     "@nx/vite": "^22.2.3",
     "@nx/vitest": "22.2.3",
     "@swc-node/register": "~1.9.1",
