chore(vue): install nx plugin

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nx/react": "^22.3.3",
     "@nx/vite": "22.3.3",
     "@nx/vitest": "22.2.3",
+    "@nx/vue": "^22.3.3",
     "@nx/web": "22.3.3",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
