--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@types/react-dom": "^19.2.3",
     "@types/w3c-web-serial": "^1.0.8",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^4.0.0",
     "@vitest/ui": "^4.0.15",
+    "@vue/test-utils": "^2.4.6",
     "esbuild": "^0.19.12",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -58,10 +60,12 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.13.0",
     "vite": "^7.2.7",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "vue-tsc": "^2.2.8"
   },
   "nx": {},
   "dependencies": {
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "vue": "^3.5.13"
   }
 }
