feat(svelte): add example application

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nx/vue": "^22.3.3",
     "@nx/web": "22.3.3",
     "@playwright/test": "^1.36.0",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/svelte": "^5.2.10",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "20.19.9",
     "@types/react": "^19.2.7",
@@ -56,6 +58,8 @@
     "prettier": "^3.7.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "svelte": "^5.46.0",
+    "svelte-check": "^4.3.5",
     "tslib": "^2.3.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.13.0",
