--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "esbuild": "^0.19.12",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^3.13.1",
     "jiti": "2.4.2",
     "jsdom": "^24.1.3",
     "nx": "22.2.3",
@@ -60,6 +61,7 @@
     "react-dom": "^19.2.3",
     "svelte": "^5.46.0",
     "svelte-check": "^4.3.5",
+    "svelte-eslint-parser": "^1.4.1",
     "tslib": "^2.3.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.13.0",
