fix(example): configure Angular test with @nx/vitest:test executor

--- a/apps/examples/angular/project.json
+++ b/apps/examples/angular/project.json
@@ -63,8 +63,12 @@
       "executor": "@nx/eslint:lint"
     },
     "test": {
-      "executor": "@angular/build:unit-test",
-      "options": {}
+      "executor": "@nx/vitest:test",
+      "outputs": ["{workspaceRoot}/coverage/apps/examples/angular"],
+      "options": {
+        "passWithNoTests": true,
+        "reportsDirectory": "../../../coverage/apps/examples/angular"
+      }
     },
     "serve-static": {
       "continuous": true,
