--- a/apps/examples/angular/tsconfig.app.json
+++ b/apps/examples/angular/tsconfig.app.json
@@ -5,5 +5,5 @@
     "types": ["@types/w3c-web-serial"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
+  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/test-setup.ts"]
 }
