--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/cli": "~21.0.0",
     "@angular/compiler-cli": "~21.0.0",
     "@angular/language-service": "~21.0.0",
+    "@angular/platform-browser-dynamic": "~21.0.0",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "22.3.3",
     "@nx/esbuild": "22.2.3",
@@ -86,6 +87,7 @@
     "@angular/core": "~21.0.0",
     "@angular/forms": "~21.0.0",
     "@angular/platform-browser": "~21.0.0",
+    "@angular/platform-browser-dynamic": "~21.0.0",
     "@angular/router": "~21.0.0",
     "rxjs": "^7.8.2",
     "vue": "^3.5.13"
