--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nx run-many --target=test --all --exclude=@web-serial-rxjs/workspace"
   },
   "repository": {
     "type": "git",
