--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -19,7 +19,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "npm run build:types && npm run build:bundle",
+    "build": "pnpm run build:types && pnpm run build:bundle",
     "build:types": "tsc --project tsconfig.lib.json",
     "build:bundle": "node esbuild.config.mjs",
     "clean": "rm -rf dist"
