refactor: rename package from @web-serial-rxjs/web-serial-rxjs to @web-serial-rxjs
Update package name to use scoped name format for npm publication.
This change updates all references across the codebase including:
- Package.json files
- TypeScript path aliases
- Import statements in example applications
- Documentation files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@web-serial-rxjs/web-serial-rxjs": [
+      "@web-serial-rxjs": [
         "packages/web-serial-rxjs/src/index.ts"
       ]
     }
