--- a/apps/example-react/package.json
+++ b/apps/example-react/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@web-serial-rxjs/web-serial-rxjs": "*",
+    "@web-serial-rxjs": "*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.2"
