--- a/apps/example-svelte/package.json
+++ b/apps/example-svelte/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@web-serial-rxjs/web-serial-rxjs": "*",
+    "@web-serial-rxjs": "*",
     "rxjs": "^7.8.2",
     "svelte": "^5.0.0"
   }
