--- a/apps/example-vue/package.json
+++ b/apps/example-vue/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@web-serial-rxjs/web-serial-rxjs": "*",
+    "@web-serial-rxjs": "*",
     "vue": "^3.5.13",
     "rxjs": "^7.8.2"
   }
