--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web-serial-rxjs/web-serial-rxjs",
+  "name": "@web-serial-rxjs",
   "version": "0.0.1",
   "private": true,
   "type": "commonjs",
