--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-svelte": "^3.13.1",
     "jiti": "2.4.2",
     "jsdom": "^24.1.3",
+    "jsonc-eslint-parser": "^2.4.2",
     "nx": "22.2.3",
     "prettier": "^3.7.4",
     "react": "^19.2.3",
@@ -77,9 +78,9 @@
     "svelte-check": "^4.3.5",
     "svelte-eslint-parser": "^1.4.1",
     "tslib": "^2.3.0",
+    "typedoc": "^0.26.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.13.0",
-    "typedoc": "^0.26.0",
     "vite": "^7.2.7",
     "vitest": "^4.0.15",
     "vue-tsc": "^2.2.8"
