--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "@angular/platform-browser-dynamic": "~21.0.0",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "22.3.3",
-    "@nx/esbuild": "22.2.3",
-    "@nx/eslint": "20.3.1",
-    "@nx/eslint-plugin": "20.3.1",
+    "@nx/esbuild": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
     "@nx/js": "22.3.3",
     "@nx/playwright": "22.3.3",
-    "@nx/react": "^22.3.3",
+    "@nx/react": "22.3.3",
     "@nx/vite": "22.3.3",
-    "@nx/vitest": "22.2.3",
-    "@nx/vue": "^22.3.3",
+    "@nx/vitest": "22.3.3",
+    "@nx/vue": "22.3.3",
     "@nx/web": "22.3.3",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~21.0.0",
@@ -64,13 +64,13 @@
     "angular-eslint": "^21.0.1",
     "esbuild": "^0.19.12",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-svelte": "^3.13.1",
     "jiti": "2.4.2",
     "jsdom": "^24.1.3",
     "jsonc-eslint-parser": "^2.4.2",
-    "nx": "22.2.3",
+    "nx": "22.3.3",
     "prettier": "^3.7.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
