--- a/apps/example-react/package.json
+++ b/apps/example-react/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@web-serial-rxjs/react-example",
+  "name": "@gurezo/web-serial-rxjs/react-example",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "dependencies": {
-    "@web-serial-rxjs": "*",
+    "@gurezo/web-serial-rxjs": "*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.2"
