--- a/apps/example-svelte/package.json
+++ b/apps/example-svelte/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@web-serial-rxjs/svelte-example",
+  "name": "@gurezo/web-serial-rxjs/svelte-example",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "dependencies": {
-    "@web-serial-rxjs": "*",
+    "@gurezo/web-serial-rxjs": "*",
     "rxjs": "^7.8.2",
     "svelte": "^5.0.0"
   }
