--- a/apps/example-vue/package.json
+++ b/apps/example-vue/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@web-serial-rxjs/vue-example",
+  "name": "@gurezo/web-serial-rxjs/vue-example",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "dependencies": {
-    "@web-serial-rxjs": "*",
+    "@gurezo/web-serial-rxjs": "*",
     "vue": "^3.5.13",
     "rxjs": "^7.8.2"
   }
