--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,10 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run lint
-        run: nx run-many --target=lint --all
+        run: pnpm exec nx run-many --target=lint --all
 
       - name: Run build
-        run: nx run-many --target=build --all
+        run: pnpm exec nx run-many --target=build --all
 
       - name: Run tests
         run: pnpm test
