--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "svelte-check": "^4.3.5",
     "svelte-eslint-parser": "^1.4.1",
     "tslib": "^2.3.0",
-    "typedoc": "^0.26.0",
+    "typedoc": "^0.28.15",
+    "typedoc-rhineai-theme": "^1.2.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.13.0",
     "vite": "^7.2.7",
