refactor: remove CJS build configuration
Remove CommonJS build output as it's redundant for browser-only Web Serial API.
This library is designed for browser environments, so CJS support is unnecessary.

- Remove CJS build config from esbuild.config.mjs
- Remove CJS-related fields from package.json (main, type, exports.require)
- Update tsconfig.json module setting from commonjs to esnext
- Update project.json format from cjs to esm

Closes #51

--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -2,15 +2,12 @@
   "name": "@gurezo/web-serial-rxjs",
   "version": "0.0.1",
   "private": true,
-  "type": "commonjs",
-  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
   },
