fix(web-serial-rxjs): configure npm package distribution
- Fix TypeScript config to output type definitions to dist/ directory
- Add LICENSE and README.ja.md to files field in package.json
- Update project.json to remove assets and disable generatePackageJson
- Replace package README with repository README and update links to absolute URLs
- Add README.ja.md with absolute URL links

This ensures npm package contains only necessary files and provides
stable type definitions and entry points.

Closes #63

--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -14,13 +14,16 @@
     "./package.json": "./package.json"
   },
   "files": [
-    "dist",
-    "README.md"
+    "dist/**",
+    "README.md",
+    "README.ja.md",
+    "LICENSE"
   ],
   "scripts": {
-    "build": "pnpm run build:types && pnpm run build:bundle",
+    "build": "pnpm run build:types && pnpm run build:bundle && pnpm run build:copy-files",
     "build:types": "tsc --project tsconfig.lib.json",
     "build:bundle": "node esbuild.config.mjs",
+    "build:copy-files": "cp ../../LICENSE . 2>/dev/null || true",
     "clean": "rm -rf dist"
   },
   "dependencies": {},
