--- a/packages/web-serial-rxjs/project.json
+++ b/packages/web-serial-rxjs/project.json
@@ -12,9 +12,8 @@
         "outputPath": "packages/web-serial-rxjs/dist",
         "main": "packages/web-serial-rxjs/src/index.ts",
         "tsConfig": "packages/web-serial-rxjs/tsconfig.lib.json",
-        "assets": ["packages/web-serial-rxjs/*.md"],
         "format": ["esm"],
-        "generatePackageJson": true
+        "generatePackageJson": false
       }
     },
     "lint": {
