--- a/packages/web-serial-rxjs/tsconfig.lib.json
+++ b/packages/web-serial-rxjs/tsconfig.lib.json
@@ -1,12 +1,14 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
-    "types": ["node", "@types/w3c-web-serial"]
+    "types": ["node", "@types/w3c-web-serial"],
+    "paths": {}
   },
   "include": ["src/**/*.ts"],
   "exclude": [
