--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "nx run-many --target=test --all --exclude=@gurezo/web-serial-rxjs/workspace",
     "docs:generate": "typedoc --options packages/web-serial-rxjs/typedoc.json",
     "docs:clean": "rm -rf docs",
-    "docs": "pnpm run docs:clean && pnpm run docs:generate"
+    "docs": "pnpm run docs:clean && pnpm run docs:generate",
+    "publish:test": "pnpm publish --dry-run --no-git-checks --filter @gurezo/web-serial-rxjs"
   },
   "repository": {
     "type": "git",
