fix(web-serial-rxjs): ensure dist directory is included in npm package
- Add prepublishOnly script to build before publish
- Use pnpm exec for tsc in build:types script for monorepo compatibility
- Add build:cleanup step to remove unwanted files
- Adjust tsconfig.lib.json paths

Fixes #77

--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -20,11 +20,13 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "pnpm run build:types && pnpm run build:bundle && pnpm run build:copy-files",
-    "build:types": "tsc --project tsconfig.lib.json",
+    "build": "pnpm run build:types && pnpm run build:bundle && pnpm run build:copy-files && pnpm run build:cleanup",
+    "build:types": "pnpm exec tsc --project tsconfig.lib.json",
     "build:bundle": "node esbuild.config.mjs",
     "build:copy-files": "cp ../../LICENSE . 2>/dev/null || true",
-    "clean": "rm -rf dist"
+    "build:cleanup": "rm -rf dist/packages dist/package.json 2>/dev/null || true",
+    "clean": "rm -rf dist",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {},
   "peerDependencies": {
