chore(web-serial-rxjs): add LICENSE file for npm package
LICENSE file is copied to package directory during build process
and included in the published npm package

--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "build": "pnpm run build:types && pnpm run build:bundle && pnpm run build:copy-files && pnpm run build:cleanup",
-    "build:types": "pnpm exec tsc --project tsconfig.lib.json",
+    "build:types": "../../node_modules/.bin/tsc --project tsconfig.lib.json",
     "build:bundle": "node esbuild.config.mjs",
     "build:copy-files": "cp ../../LICENSE . 2>/dev/null || true",
     "build:cleanup": "rm -rf dist/packages dist/package.json 2>/dev/null || true",
