--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,22 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write  # ★ Trusted Publishing(OIDC)に必須
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-          registry-url: 'https://registry.npmjs.org'
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          registry-url: 'https://registry.npmjs.org/'
 
       - name: Get pnpm store directory
         shell: bash
@@ -71,13 +71,21 @@ jobs:
           fi
           echo "Version validation passed"
 
-      - name: Publish to npm
+      # ★★★ ここが肝：Trusted Publishing(OIDC)で publish（トークン不要）
+      - name: Publish to npm (Trusted Publishing / OIDC)
         id: publish-npm
         continue-on-error: true
+        shell: bash
         run: |
-          pnpm publish --filter @gurezo/web-serial-rxjs --access public --no-git-checks || echo "::warning::npm publish failed, but continuing with release creation"
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # Nx の出力先に合わせて調整してください
+          PKG_DIR="dist/packages/web-serial-rxjs"
+
+          if [ ! -f "$PKG_DIR/package.json" ]; then
+            echo "::error::package.json not found in $PKG_DIR. Please confirm Nx output path."
+            exit 1
+          fi
+
+          npm publish "$PKG_DIR" --access public || echo "::warning::npm publish failed, but continuing with release creation"
 
       - name: Create GitHub Release
         if: always()
