--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org/'
-        # ★ env: NODE_AUTH_TOKEN は不要なので削除
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCOUNT }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
