ci(workspace): add GitHub Release creation to release workflow
Add GitHub Release auto-generation step after npm publish using OIDC Trusted Publishing.
This resolves the issue where the GitHub Release creation step was removed in PR #90
while restoring OIDC authentication.

Fixes #66

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,3 +30,10 @@ jobs:
 
       - name: Publish to npm (OIDC Trusted Publishing)
         run: npm publish ./packages/web-serial-rxjs --access public --provenance
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          generate_release_notes: true
