ci: add scope to npm publish workflow
Add scope parameter to actions/setup-node@v4 to properly authenticate
scoped package @gurezo/web-serial-rxjs when publishing to npm.

This fixes the 404 error when publishing the scoped package via OIDC
Trusted Publishing in GitHub Actions.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org/'
+          scope: '@gurezo'
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
