--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,12 @@ jobs:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org/'
           scope: '@gurezo'
+          always-auth: true
+
+      - name: Configure npm for OIDC
+        run: |
+          echo "@gurezo:registry=https://registry.npmjs.org/" >> .npmrc
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
