--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,17 +23,17 @@ jobs:
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org/'
-          scope: '@gurezo'
-          always-auth: true
-
-      - name: Configure npm for OIDC
-        run: |
-          echo "@gurezo:registry=https://registry.npmjs.org/" >> .npmrc
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
       - run: pnpm exec nx build web-serial-rxjs
+
+      # 念のため：token系npmrcを消してOIDC一本化
+      - name: Force OIDC only
+        run: |
+          rm -f .npmrc
+          rm -f ~/.npmrc
+          rm -f packages/web-serial-rxjs/.npmrc
 
       - name: Publish to npm (OIDC Trusted Publishing)
         run: npm publish ./packages/web-serial-rxjs --access public --provenance
