--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   release:
@@ -11,11 +11,6 @@ jobs:
     permissions:
       contents: write
       id-token: write
-
-    # ★ tokenがどこから来ても publish で使わせない
-    env:
-      NODE_AUTH_TOKEN: ""
-      NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc-ci
 
     steps:
       - uses: actions/checkout@v4
@@ -26,35 +21,17 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          registry-url: 'https://registry.npmjs.org/'
-
-      - name: Prepare npmrc (no token)
-        shell: bash
-        run: |
-          echo "registry=https://registry.npmjs.org/" > "${NPM_CONFIG_USERCONFIG}"
-          echo "always-auth=false" >> "${NPM_CONFIG_USERCONFIG}"
-          echo "== npmrc =="
-          cat "${NPM_CONFIG_USERCONFIG}"
+          node-version: "22"
+          registry-url: "https://registry.npmjs.org/"
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
       - run: pnpm exec nx build web-serial-rxjs
 
-      # ★ ここで OIDC が出ているかを確定
-      - name: Debug OIDC availability
-        shell: bash
-        run: |
-          echo "ACTIONS_ID_TOKEN_REQUEST_URL=${ACTIONS_ID_TOKEN_REQUEST_URL:+SET}"
-          echo "ACTIONS_ID_TOKEN_REQUEST_TOKEN=${ACTIONS_ID_TOKEN_REQUEST_TOKEN:+SET}"
-          echo "NODE_AUTH_TOKEN=${NODE_AUTH_TOKEN:+SET}"
-          echo "npm userconfig=$(npm config get userconfig)"
-          echo "npm registry=$(npm config get registry)"
-
-      - name: Publish to npm (OIDC Trusted Publishing)
-        env:
-          NODE_AUTH_TOKEN: ""
+      - name: Publish to npm
         run: npm publish ./packages/web-serial-rxjs --access public --provenance
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -62,3 +39,5 @@ jobs:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
