ci(workspace): migrate to npm trusted publishing
Migrate npm publish workflow to use Trusted Publishing / OIDC instead of NODE_AUTH_TOKEN.
This improves security by removing the need to store NPM_TOKEN secret.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,8 @@ jobs:
       - run: pnpm test
       - run: pnpm exec nx build web-serial-rxjs
 
-      - name: Publish to npm
+      - name: Publish to npm (Trusted Publishing / OIDC)
         run: npm publish ./packages/web-serial-rxjs --access public --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
