--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,15 +19,25 @@ jobs:
         with:
           version: 10
 
+      # 重要：registry-url を渡さない（token用npmrcを作らせない）
       - uses: actions/setup-node@v4
         with:
           node-version: "22"
-          registry-url: "https://registry.npmjs.org/"
+
+      # registry は自分で設定（tokenは設定しない）
+      - name: Configure npm registry (no token)
+        shell: bash
+        run: |
+          npm config set registry "https://registry.npmjs.org/"
+          npm config get registry
+          # 念のため token が設定されていたら消す
+          npm config delete //registry.npmjs.org/:_authToken || true
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
       - run: pnpm exec nx build web-serial-rxjs
 
+      # OIDC publish（token env は渡さない）
       - name: Publish to npm (Trusted Publishing / OIDC)
         run: npm publish ./packages/web-serial-rxjs --access public --provenance
 
