docs(workspace): split README into separate documentation files
Split README.md and README.ja.md into three separate documentation files:
- Quick Start guide
- API Reference
- Advanced Usage

This improves readability and makes it easier to maintain documentation.
The main README files now contain only overview and links to detailed docs.
Updated package.json homepage to point to repository root.

Closes #109

--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -39,7 +39,7 @@
   "bugs": {
     "url": "https://github.com/gurezo/web-serial-rxjs/issues"
   },
-  "homepage": "https://github.com/gurezo/web-serial-rxjs#readme",
+  "homepage": "https://github.com/gurezo/web-serial-rxjs",
   "keywords": [
     "rxjs",
     "serial",
