--- a/packages/web-serial-rxjs/package.json
+++ b/packages/web-serial-rxjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gurezo/web-serial-rxjs",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "A TypeScript library that provides a reactive RxJS-based wrapper for the Web Serial API, enabling easy serial port communication in web applications.",
   "author": "Akihiko Kigure <akihiko.kigure@gmail.com>",
   "license": "MIT",
@@ -39,7 +39,7 @@
   "bugs": {
     "url": "https://github.com/gurezo/web-serial-rxjs/issues"
   },
-  "homepage": "https://github.com/gurezo/web-serial-rxjs",
+  "homepage": "https://gurezo.github.io/web-serial-rxjs/",
   "keywords": [
     "rxjs",
     "serial",
